# C-IPointsProject

./: .codecov.yml  .gitignore  C++lPointsProject.cpp  C++lPointsProject.h  CMakeLists.txt  CMakePresets.json  C_09_09lPointsProject_8cpp.html  C_09_09lPointsProject_8h_source.html  CppUnitTest_8h_source.html  Doxyfile  README.md  TicTacToe.cpp  TicTacToe.h  TicTacToe_8cpp.html  TicTacToe_8h.html  TicTacToe_8h_source.html  _cpp_unit_test_8h.html  _tic_tac_toe_8h.html  build_2_c_make_files_23_828_83-msvc11_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.html  codecov.cpp  codecoveragetester.cpp  codecoveragetester.h  codecoveragetester_8h_source.html  dictionary.txt  dir_3c19a1e38b0f2b3b1966e0f04b5d6e1c.html  dir_917165397de1d68f9dc544fb9c1a2379.html  dir_bd9292819c3cebed38ca376a9e436a7a.html  dir_d4ce5e4985106c1a496f05b3bc623464.html  doxygen_crawl.html  files.html  globals.html  globals_defs.html  globals_func.html  hangman.c  hangman.cpp  hangman.h  hangman_8cpp.html  hangman_8h.html  hangman_8h_source.html  home.c  (+42 more)
.github/workflows/: build.yml  c-cpp.yml  cmake-single-platform.yml  doxygen-gh-pages.yml
html/: _c_09_09l_points_project_8cpp.html  _c_09_09l_points_project_8h.html  _c_09_09l_points_project_8h_source.html  _cpp_unit_test_8h.html  _cpp_unit_test_8h_source.html  _r_e_a_d_m_e_8md.html  _tic_tac_toe_8cpp.html  _tic_tac_toe_8h.html  _tic_tac_toe_8h_source.html  build_2_c_make_files_23_828_83-msvc11_2_compiler_id_c_2_c_make_c_compiler_id_8c.html  codecov_8cpp.html  codecoveragetester_8cpp.html  codecoveragetester_8h.html  codecoveragetester_8h_source.html  dir_002f5084d29a34a9cdac6433877dab78.html  dir_054da5378a66845984c3cc96f3836437.html  dir_26e161bd706b689737ea0ef524ddc480.html  dir_31b84616088d92d45df396c9cc84ac6a.html  dir_3e42ea95280c293d6f34193fc0feec9f.html  dir_56bb686df39d6d446ae0c278059a2073.html  dir_576992e2531128af9b0c929d9f9683c3.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_83d34e171ca3c4451918893336e497e4.html  dir_9bb78d5c265583a64d45e286c3476d58.html  dir_b9a4a7773a2822710e382dad73ef2ebd.html  dir_bff996c5498827fd2383c67055681894.html  dir_c934665dab4d17084cfed5ec2bdea0c0.html  dir_df16d92d0175d10b4122af57858d9cc1.html  dir_e49c6320934099ef3ce54e88c794e182.html  dir_f09d564695a8a7f5713b0ef37bdf7d31.html  doxygen_crawl.html  files.html  foo_8h.html  foo_8h_source.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  hangman_8cpp.html  hangman_8h.html  (+24 more)
html/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  (+35 more)
latex/: _c_09_09l_points_project_8cpp.tex  _c_09_09l_points_project_8h.tex  _c_09_09l_points_project_8h_source.tex  _cpp_unit_test_8h.tex  _cpp_unit_test_8h_source.tex  _tic_tac_toe_8cpp.tex  _tic_tac_toe_8h.tex  _tic_tac_toe_8h_source.tex  build_2_c_make_files_23_828_83-msvc11_2_compiler_id_c_2_c_make_c_compiler_id_8c.tex  build_2_c_make_files_23_828_83-msvc11_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.tex  codecov_8cpp.tex  codecoveragetester_8cpp.tex  codecoveragetester_8h.tex  codecoveragetester_8h_source.tex  dir_002f5084d29a34a9cdac6433877dab78.tex  dir_26e161bd706b689737ea0ef524ddc480.tex  dir_3c19a1e38b0f2b3b1966e0f04b5d6e1c.tex  dir_3e42ea95280c293d6f34193fc0feec9f.tex  dir_63772b626f2709090f0bdca0f40827b4.tex  dir_917165397de1d68f9dc544fb9c1a2379.tex  dir_9bb78d5c265583a64d45e286c3476d58.tex  dir_bd9292819c3cebed38ca376a9e436a7a.tex  dir_bff996c5498827fd2383c67055681894.tex  dir_df16d92d0175d10b4122af57858d9cc1.tex  dir_e49c6320934099ef3ce54e88c794e182.tex  files.tex  foo_8h.tex  foo_8h_source.tex  hangman_8cpp.tex  hangman_8h.tex  hangman_8h_source.tex  home_8cpp.tex  home_8h.tex  home_8h_source.tex  main_8c.tex  md__r_e_a_d_m_e.tex  mockunittest_8cpp.tex  newwordle_8cpp.tex  newwordle_8h.tex  newwordle_8h_source.tex  (+13 more)
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_f.js  defines_3.js  files_0.js  files_1.js  files_3.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_c.js  pages_0.js  pages_1.js  pages_2.js  pages_5.js  searchdata.js
tests/: runAllTest.cpp  test_hangman.cpp  test_newwordle.cpp  test_secretNumber.cpp  test_tictactoe.h
xml/: Doxyfile.xml  _c_09_09l_points_project_8cpp.xml  _c_09_09l_points_project_8h.xml  _cpp_unit_test_8h.xml  _r_e_a_d_m_e_8md.xml  _tic_tac_toe_8cpp.xml  _tic_tac_toe_8h.xml  build_2_c_make_files_23_828_83-msvc11_2_compiler_id_c_2_c_make_c_compiler_id_8c.xml  build_2_c_make_files_23_828_83-msvc11_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.xml  codecov_8cpp.xml  codecoveragetester_8cpp.xml  codecoveragetester_8h.xml  dir_002f5084d29a34a9cdac6433877dab78.xml  dir_26e161bd706b689737ea0ef524ddc480.xml  dir_3c19a1e38b0f2b3b1966e0f04b5d6e1c.xml  dir_3e42ea95280c293d6f34193fc0feec9f.xml  dir_4fef79e7177ba769987a8da36c892c5f.xml  dir_63772b626f2709090f0bdca0f40827b4.xml  dir_917165397de1d68f9dc544fb9c1a2379.xml  dir_9bb78d5c265583a64d45e286c3476d58.xml  dir_bd9292819c3cebed38ca376a9e436a7a.xml  dir_bff996c5498827fd2383c67055681894.xml  dir_df16d92d0175d10b4122af57858d9cc1.xml  dir_e49c6320934099ef3ce54e88c794e182.xml  dir_f09d564695a8a7f5713b0ef37bdf7d31.xml  foo_8h.xml  hangman_8cpp.xml  hangman_8h.xml  home_8cpp.xml  home_8h.xml  index.xml  main_8c.xml  md__r_e_a_d_m_e.xml  mockunittest_8cpp.xml  namespacestd.xml  newwordle_8cpp.xml  newwordle_8h.xml  out_2build_2x64-debug_2_c_make_files_23_828_83-msvc11_2_compiler_id_c_2_c_make_c_compiler_id_8c.xml  out_2build_2x64-debug_2_c_make_files_23_828_83-msvc11_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.xml  run_all_test_8cpp.xml  (+7 more)
